--- a/SPP-Android/frontend/app/src/main/res/values/themes.xml
+++ b/SPP-Android/frontend/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.Apk_spp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="fontFamily">@font/elms</item>
     </style>
 
     <style name="Theme.Apk_spp" parent="Base.Theme.Apk_spp" />
