--- a/SPP-Android/frontend/app/src/main/res/values/themes.xml
+++ b/SPP-Android/frontend/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="fontFamily">@font/elms</item>
+        <item name="android:statusBarColor">#FFF</item>
     </style>
 
     <style name="Theme.Apk_spp" parent="Base.Theme.Apk_spp" />
