--- a/SPP-Android/frontend/app/src/main/res/layout/fragment_pembayaran.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/fragment_pembayaran.xml
@@ -48,8 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginHorizontal="14dp"
-        android:layout_marginVertical="24dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/et_bg"
         android:padding="12dp"
         android:inputType="text"
@@ -67,6 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:divider="#00000000"
+        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSearch"
         app:layout_constraintEnd_toEndOf="parent"
