--- a/SPP-Android/frontend/app/src/main/res/layout/fragment_pembayaran.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/fragment_pembayaran.xml
@@ -58,6 +58,21 @@
         android:drawableRight="@drawable/search"
         android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@+id/divider1"
+        app:layout_constraintBottom_toTopOf="@+id/dropdown_kelas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <Spinner
+        android:id="@+id/dropdown_kelas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/et_bg"
+        android:padding="12dp"
+        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@+id/etSearch"
         app:layout_constraintBottom_toTopOf="@+id/listView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -69,7 +84,7 @@
         android:divider="#00000000"
         android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSearch"
+        app:layout_constraintTop_toBottomOf="@+id/dropdown_kelas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
