--- a/SPP-Android/frontend/app/src/main/res/layout/fragment_hapus.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/fragment_hapus.xml
@@ -13,11 +13,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/divider1">
 
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/back"
+            android:layout_gravity="start"
+            android:layout_marginRight="15dp"/>
+
         <TextView
             android:id="@+id/tvToolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pembayaran"
+            android:text="Riwayat Hapus"
             android:textSize="19sp"
             android:textStyle="bold"
             android:layout_gravity="center"
@@ -39,55 +47,6 @@
         android:layout_height="2dp"
         android:background="#ccc"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintBottom_toTopOf="@+id/etSearch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <EditText
-        android:id="@+id/etSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/et_bg"
-        android:padding="12dp"
-        android:inputType="text"
-        android:hint="Cari nama siswa"
-        android:textColor="@color/black"
-        android:drawableRight="@drawable/search"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/divider1"
-        app:layout_constraintBottom_toTopOf="@+id/dropdown_kelas"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <Spinner
-        android:id="@+id/dropdown_kelas"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:background="@drawable/et_bg"
-        android:padding="12dp"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/etSearch"
-        app:layout_constraintBottom_toTopOf="@+id/btnRiwayatHapus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnRiwayatHapus"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/btn_bg"
-        android:backgroundTint="#D2322D"
-        android:text="Riwayat Hapus Transaksi"
-        android:textColor="@android:color/white"
-        app:cornerRadius="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/dropdown_kelas"
         app:layout_constraintBottom_toTopOf="@+id/listView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -99,7 +58,7 @@
         android:divider="#00000000"
         android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnRiwayatHapus"
+        app:layout_constraintTop_toBottomOf="@+id/divider1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
